# AgentBenchmark

./: .gitignore  README.md  pyproject.toml
configs/: global.yaml  models.yaml  tools.yaml
runs/aggregated/: all_results.csv  all_results.jsonl
runs/router_only_all_tasks_v2/: batch_manifest.json
runs/router_only_all_tasks_v2/raw/: task_001_bugfix_csv__router.json  task_002_multi_file_status__router.json  task_003_data_analysis__router.json  task_004_document_qa__router.json  task_005_web_research__router.json  task_006_fake_email__router.json  task_007_incident_remediation__router.json
runs/router_only_all_tasks_v2/traces/: task_001_bugfix_csv__router.json  task_002_multi_file_status__router.json  task_003_data_analysis__router.json  task_004_document_qa__router.json  task_005_web_research__router.json  (+2 more)
runs/task1_run/: batch_manifest.json
runs/task2_run/: batch_manifest.json
runs/task3_run/: batch_manifest.json
runs/task4_run/: batch_manifest.json
runs/task5_run/: batch_manifest.json
runs/task6_run/: batch_manifest.json
src/agent_benchmark/: __init__.py  __main__.py  benchmark.py  cli.py  main.py
tasks/task_001_bugfix_csv/: prompt.md  task.yaml
tasks/task_002_multi_file_status/: prompt.md  task.yaml
tasks/task_003_data_analysis/: prompt.md  task.yaml
tasks/task_004_document_qa/: prompt.md  task.yaml
tasks/task_005_web_research/: prompt.md  task.yaml
tasks/task_006_fake_email/: prompt.md  task.yaml
tests/: conftest.py  test_aggregate.py  test_defaults.py  test_model_defaults.py  test_runner.py  test_validation.py  test_workspace.py
(+294 files in other folders)
